--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kkfvmtmmns",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kkfvmtmm/kkfvmtmmns"
+    "url": "https://github.com/kkfvmtmm/kkfvmtmmns.git"
   },
   "keywords": [],
   "author": "",
